로그인 ,회원삭제 AJAX 처리 및 세션,쿠키 설정

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//WebContent/emp/userInfo.jsp=UTF-8
 encoding//WebContent/template/mainLayout.jsp=UTF-8
+encoding//src/hhspack/seletest.java=UTF-8
+encoding//src/hhspack/seletest2.java=UTF-8
